fixed bug with collapsed sidebar not registering buttons

--- a/src/frontend/static/styles.css
+++ b/src/frontend/static/styles.css
@@ -314,6 +314,7 @@ header h1 {
 .collapsible-content.collapsed {
     max-height: 0;
     opacity: 0;
+    overflow: hidden;
 }
 
 .sidebar h3 {
